feat: add private content library imports
